add Gui, language, settings, bug fix